<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="home_title">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="project1_title">SPOTIFY STREAMER</string>
    <string name="project2_title">FOOTBALL SCORES APP</string>
    <string name="project3_title">LIBRARY APP</string>
    <string name="project4_title">BUILD IT BIGGER</string>
    <string name="project5_title">XYZ READER</string>
    <string name="project6_title">CAPSTONE: MY OWN APP</string>
</resources>
